[package]
name = "vote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
serde = { version = "1.0.188", features = ["derive"] }
itertools = "0.11.0"
serde_json = { version = "1.0.106" }