[package]
name = "vote_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-rc1", features = ["csr", "nightly"] }
reqwasm = { version = "0.5.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106" }
thiserror = "1.0.48"
